--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "projectseconed",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  
+  "private": true,
+
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
@@ -12,8 +17,25 @@
   },
   "author": "Shiri",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ShiriGlam/projectseconed/issues"
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.4"
   },
-  "homepage": "https://github.com/ShiriGlam/projectseconed#readme"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
