--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "projectseconed",
   "version": "1.0.0",
   "description": "",
-  
   "private": true,
-
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -23,6 +21,8 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-native-image-picker": "^7.1.0",
+    "react-native-permissions": "^4.1.1",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
