--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
+    ],
+    "jest": {
+      "testMatch": ["src/*.test.js"],
+      "testPathIgnorePatterns": ["/node_modules/", "/build/"]
+    }
   }
 }
